--- a/html/customer/css/default.css
+++ b/html/customer/css/default.css
@@ -2090,6 +2090,24 @@ input.time
 	text-align	: center;
 }
 
+/* I know this is bad, but all <strong>s here are validation errors */
+#portal-user-registration strong {
+	display	: block !important;
+	margin	: 0 !important;
+	padding	: 0 !important;
+}
+#portal-user-registration strong.-invalid {
+	margin-top	: .4em !important;
+	padding		: 2px 4px !important;
+
+	background	: #ffecf0;
+	color		: #111;
+	border		: 1px solid #d30;
+}
+#portal-user-registration #portal-user-registration-error.-invalid {
+	margin-bottom	: .4em !important;
+}
+
 input::-webkit-input-placeholder {
 	font-style	: oblique;	
 }
