Fixed a bug which prevented the ability to set a Contact as the Primary Contact for an Account

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -12817,3 +12817,7 @@ dl.reflex-propertylist > dd > * {
 }
 
 /************************** END - Component Account User Edit - END **************************/
+
+#ContactTable > tbody td:last-of-type img {
+	vertical-align	: top;
+}
